<resources>
    <string name="app_name">Waiter</string>
    <string name="from">From</string>
    <string name="waiter">Waiter</string>
    <string name="cashier">Cashier</string>
    <string name="chef">Chef</string>
    <string name="admin">Admin</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="form">Form</string>
    <string name="work">Work</string>
    <string name="menu">Menu</string>
    <string name="table">Table</string>
    <string name="who">Who you are?</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>